Add enterprise member routes
